; ModuleID = '/home/carl/AnghaBench/systemd/src/journal/extr_test-journal.c_mkdtemp_chdir_chattr.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal/extr_test-journal.c_mkdtemp_chdir_chattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FS_NOCOW_FL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @mkdtemp_chdir_chattr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mkdtemp_chdir_chattr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 @mkdtemp(i8* %3)
  %5 = call i32 @assert_se(i32 %4)
  %6 = load i8*, i8** %2, align 8
  %7 = call i64 @chdir(i8* %6)
  %8 = icmp sge i64 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert_se(i32 %9)
  %11 = load i8*, i8** %2, align 8
  %12 = load i32, i32* @FS_NOCOW_FL, align 4
  %13 = load i32, i32* @FS_NOCOW_FL, align 4
  %14 = call i32 @chattr_path(i8* %11, i32 %12, i32 %13, i32* null)
  ret void
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @mkdtemp(i8*) #1

declare dso_local i64 @chdir(i8*) #1

declare dso_local i32 @chattr_path(i8*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
